#1128 -- Fixes missing truncation in IE 11 for Persona text (#1219)

--- a/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
+++ b/packages/office-ui-fabric-react/src/components/Persona/Persona.scss
@@ -229,6 +229,7 @@ $ms-Persona-presenceSizeXl: 28px;
 .details {
   @include padding(0, 24px, 0, 12px);
   min-width: 0;
+  width: 100%;
   @include text-align(left);
 }
 
